--- a/docs/src/manual/lstdefs.tex
+++ b/docs/src/manual/lstdefs.tex
@@ -11,6 +11,7 @@
     g16.spinput.sh,     g16.spinput,
     g16.submit.sh,      g16.submit,
     g16.testroute.sh,   g16.testroute,  
+    g16.wrapper.sh,     g16.wrapper,
     g16.tools.rc,       .g16.toolsrc,    g16.tools, 
   },%
   keywords  = [2]{
