--- a/docs/src/manual/main.tex
+++ b/docs/src/manual/main.tex
@@ -36,7 +36,7 @@
 \usepackage{CJKutf8} 
 
 % What this is about
-\title{Manual for \texttt{tools-for-g16.bash} (0.2.2, 2019-04-04)}
+\title{Manual for \texttt{tools-for-g16.bash} (0.3.0, 2019-07-xx)}
 \author{Martin C Schwarzer}
 \date{\today}
 
