--- a/docs/src/refsheet/main.tex
+++ b/docs/src/refsheet/main.tex
@@ -318,7 +318,9 @@ If no files given, it finds energy statements from all log files in the current 
 \begin{rslisttt}{-m <ARG>}
   \item[-i <ARG>] Specify input suffix if processing directory
   \item[-o <ARG>] Specify output suffix if processing directory
+  \item[-R      ] Recurse into directories
   \item[-L      ] Print the full file and path name (seperated by newline)
+  \item[-1      ] Print only one line per file
   \item[--      ] Close reading options
   \item[-s      ] Silence script (incremental)
   \item[-h      ] Help file 
