--- a/docs/src/manual/main.tex
+++ b/docs/src/manual/main.tex
@@ -50,7 +50,7 @@
 
 The following document is a more verbose version of the already existing reference sheet.
 As documentation often goes, it takes some time to reflect all changes properly.
-Some sections (expecially scetion~ref{sec:usage-examples}) may still be incomplete,
+Some sections (especially section~\ref{sec:usage-examples}) may still be incomplete,
 a work in progress.
 I apologise for the inconvenience.
 
