Update to version 0.3.1; update manual
Updated manual to include all changes from the current patch.
Bumped version to 0.3.1.

--- a/docs/src/manual/main.tex
+++ b/docs/src/manual/main.tex
@@ -36,7 +36,7 @@
 \usepackage{CJKutf8} 
 
 % What this is about
-\title{Manual for \texttt{tools-for-g16.bash} (0.3.0, 2019-07-19)}
+\title{Manual for \texttt{tools-for-g16.bash} (0.3.1, 2019-09-11)}
 \author{Martin C Schwarzer}
 \date{\today}
 
@@ -59,6 +59,24 @@ I apologise for the inconvenience.
 \input{utilities.tex}
 \input{examples.tex}
 
+\section{License (GNU General Public License v3.0)}
+
+tools-for-g16.bash - A collection of tools for the help with Gaussian 16.
+Copyright (C) 2019 Martin C Schwarzer
+
+This program is free software: you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation, either version 3 of the License, or
+(at your option) any later version.
+
+This program is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License
+along with this program.  If not, see \href{https://www.gnu.org/licenses/}{https://www.gnu.org/licenses/}.
+
 \section{Author, Bugs, and the Rest}
 
 This repository was created and is maintained by Martin C Schwarzer 
@@ -72,7 +90,8 @@ or fork it and send a pull request.
 The help of my colleagues for testing, finding bugs, extending the documentation is greatly appreciated.
 
 \begin{flushright}
-This document is licensed \ccbysa.
+  This software is licensed GPL-3.0.\\
+  This document is licensed \ccbysa.
 \end{flushright}
 
 \end{document}
