--- a/docs/src/refsheet/main.tex
+++ b/docs/src/refsheet/main.tex
@@ -37,7 +37,7 @@
 \newcommand\mybackslash{\char`\\}
 
 % What this is about
-\title{Cheat-Sheet for \texttt{tools-for-g16.bash} (0.3.0, 2019-07-19)}
+\title{Cheat-Sheet for \texttt{tools-for-g16.bash} (0.3.1, 2019-09-11)}
 \author{Martin C Schwarzer}
 \date{\today}
 
@@ -349,7 +349,7 @@ Usage: \texttt{g16.getfreq.sh [opt] <file(s)>}
 A tool to convert a checkpoint file to an \texttt{xyz} file. 
 This formats the \texttt{chk} first to a \texttt{fchk}.
 
-Usage: \texttt{g16.chk2xyz.sh [-s] -h | -a | <chk-file(s)>}
+Usage: \texttt{g16.chk2xyz.sh [opt] [<chk-file(s)>]}
 
 \begin{rslisttt}{-m <ARG>}
   \item[-a      ] Formats all checkpointfiles that are found in the current directory
@@ -357,6 +357,8 @@ Usage: \texttt{g16.chk2xyz.sh [-s] -h | -a | <chk-file(s)>}
   \item[-B      ] Create backup files in cases where it would overwrite them (default)
   \item[-F      ] Forces files to be overwritten
   \item[-S      ] Skips files in cases where it would overwrite them
+  \item[-R      ] Recurse through directories
+  \item[-P      ] Print; dry run
   \item[--      ] Close reading options
   \item[-s      ] Silence script (incremental)
   \item[-h      ] Help file 
@@ -371,6 +373,7 @@ Martin C Schwarzer
 \faStackExchange~\href{https://chemistry.stackexchange.com/users/4945}{Martin-\begin{CJK*}{UTF8}{min}マーチン\end{CJK*}}
 \faGithub~\href{https://github.com/polyluxus}{polyluxus}
 
+This software is licensed GPL-3.0.\\
 This document is licensed \ccbysa.
 \end{flushright}
 
